--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fonts"]
 	path = fonts
 	url = https://github.com/powerline/fonts.git
+[submodule "config/base16-shell"]
+	path = config/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
