--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "base16-shell"]
 	path = base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
+[submodule "forkedProjects/vim-airline-themes"]
+	path = forkedProjects/vim-airline-themes
+	url = https://github.com/sudavid4/vim-airline-themes.git
+[submodule "forkedProjects/base16-vim"]
+	path = forkedProjects/base16-vim
+	url = https://github.com/sudavid4/base16-vim.git
