run out of comments, some fixes

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ atom.symlink/.gitignore
 bkup
 bin/outdated
 bin/versiondiff
+.env
+bin/consul-template
+config/karabiner/assets/
+config/karabiner/automatic_backups/
+copyq
+cmus
